discussion/kv_engine/187374/187374_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55536 Expose history eviction stats

Change-Id: I1500d9ebb9ad37babfaa4ba55e88d709fed0f176

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2023-02-24 14:21:41.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-24 14:21:53.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/340008/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-24 14:24:41.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1540/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1540/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1644/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1644/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1298/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1298/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1299/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1299/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1263/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1263/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1303/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1303/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1294/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1294/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1271/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2928:14: error: excess elements in array initializer [clang-diagnostic-error]
             "magma_DataBlocksCompressSize"}};
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2956:55: error: expected expression [clang-diagnostic-error]
    addStat(Key::ep_magma_history_size_bytes_evicted, "magma_HistorySizeBytesEvicted);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3779:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3794:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3809:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3825:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3905:19: error: function definition is not allowed here [clang-diagnostic-error]
        int nkey) {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3938:19: error: function definition is not allowed here [clang-diagnostic-error]
        int nkey) {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4121:67: error: function definition is not allowed here [clang-diagnostic-error]
                            const BucketStatCollector& collector) {
                                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4190:31: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view sep) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4220:69: error: function definition is not allowed here [clang-diagnostic-error]
        const BucketStatCollector& collector, std::string_view sep) {
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4246:33: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view value) {
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4272:74: error: function definition is not allowed here [clang-diagnostic-error]
                                                 std::string_view value) {
                                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4286:72: error: function definition is not allowed here [clang-diagnostic-error]
        const BucketStatCollector& col, const ConnCounter& aggregator) {
                                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4306:63: error: function definition is not allowed here [clang-diagnostic-error]
        const CookieIface* cookie, const AddStatFn& add_stat) {
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4341:24: error: function definition is not allowed here [clang-diagnostic-error]
        bool validate) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4399:74: error: function definition is not allowed here [clang-diagnostic-error]
        const CookieIface* cookie, const AddStatFn& add_stat, Vbid vbid) {
                                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4409:63: error: function definition is not allowed here [clang-diagnostic-error]
        const CookieIface* cookie, const AddStatFn& add_stat) {
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4433:47: error: function definition is not allowed here [clang-diagnostic-error]
        const BucketStatCollector& collector) {
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1271/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2928:14:
error: excess elements in array initializer [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1271/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1306/ : FAILURE

Compile error at [2023-02-24T14:24:21.561Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/ep_engine.cc:2956:55:
error: missing terminating " character
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1306/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22972/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
